fhir/10.0.0/OperationDefinition-ClinicalImpression-t-set-measurement-validity.md
# Invalidate / Retract Invalidation of a Measurement - eHealth Infrastructure v10.0.0

* [**Table of Contents**](toc.md)
* [**Artifacts Summary**](artifacts.md)
* **Invalidate / Retract Invalidation of a Measurement**

## OperationDefinition: Invalidate / Retract Invalidation of a Measurement 

| | |
| :--- | :--- |
| *Official URL*:http://ehealth.sundhed.dk/fhir/OperationDefinition/ClinicalImpression-t-set-measurement-validity | *Version*:10.0.0 |
| Active as of 2026-08-06 | *Computable Name*:set-measurement-validity |

 
This operation is used to invalidate or retract an invalidation of a Measurement. 

## Input

 
The input parameter is a ClinicalImpression resource with the following values: 
* `status` - The status of the ClinicalImpression must be `completed`.
* `investigation.item` - Versioned reference to the Measurement that is to be invalidated or retracted.
* `investigation.item` - Unversioned reference to the Measurement that is to be invalidated or retracted.
* `subject` - Reference to the Patient .
* `episodeOfCare` - Reference to the EpisodeOfCare that the Measurement is part of.
* `code` - Should use `MeasurementAssessment` from `http://ehealth.sundhed.dk/cs/clinicalimpression-codes`.
* `finding.code` - The finding code must be `measurement-invalidated` or `measurement-invalidation-retracted`.
* The operation returns the persisted ClinicalImpression:
* `clinicalImpression` - The persisted ClinicalImpression resource with updated assessor values. 

## Operation side effects

 
* The operation will update the status of the Measurement that is being invalidated or has the invalidation retracted to `entered-in-error` or `completed` respectively.
* The operation will update the status to `entered-in-error` for any previous invalidation or invalidation retraction ClinicalImpression for the referenced Measurement, indicating that the previous ClinicalImpression is no longer used to represent the validity of the Measurement. The operation performs a search for any existing ClinicalImpression in the measurement validity cycle, and does not rely on/update the `previous` field on the input ClinicalImpression. If the input ClinicalImpression is for invalidation retraction, there must exist a ClinicalImpression invalidating the Measurement.
* The operation will add an additional investigation with the code `item-modified`, referencing the Measurement version after the patch has been applied.
* The operation will set assessor values (assessor, assessorOrganization and assessorOther). If the user is of type PRACTITIONER, assessor and assessorOrganization will be set. If the user is of type PATIENT, assessorOther will be set`.
 



## Resource Content

```json
{
  "resourceType" : "OperationDefinition",
  "id" : "ClinicalImpression-t-set-measurement-validity",
  "url" : "http://ehealth.sundhed.dk/fhir/OperationDefinition/ClinicalImpression-t-set-measurement-validity",
  "version" : "10.0.0",
  "name" : "set-measurement-validity",
  "title" : "Invalidate / Retract Invalidation of a Measurement",
  "status" : "active",
  "kind" : "operation",
  "date" : "2026-08-06T13:17:54+00:00",
  "publisher" : "Den telemedicinske infrastruktur (eHealth Infrastructure)",
  "contact" : [{
    "name" : "Den telemedicinske infrastruktur (eHealth Infrastructure)",
    "telecom" : [{
      "system" : "url",
      "value" : "http://ehealth.sundhed.dk"
    }]
  }],
  "description" : "This operation is used to invalidate or retract an invalidation of a Measurement.\r\n## Input\r\nThe input parameter is a ClinicalImpression resource with the following values:\r\n- `status` - The status of the ClinicalImpression must be `completed`.\r\n- `investigation.item` - Versioned reference to the Measurement that is to be invalidated or retracted.\r\n- `investigation.item` - Unversioned reference to the Measurement that is to be invalidated or retracted.\r\n- `subject` - Reference to the Patient .\r\n- `episodeOfCare` - Reference to the EpisodeOfCare that the Measurement is part of.\r\n- `code` - Should use `MeasurementAssessment` from `http://ehealth.sundhed.dk/cs/clinicalimpression-codes`.\r\n- `finding.code` - The finding code must be `measurement-invalidated` or `measurement-invalidation-retracted`.\r\n- `decision` - The decision code is required if `finding.code` is `measurement-invalidated`. The decision code must be `invalidated-fulfills` or `invalidated-is-not-fulfillment`.\r\n## Output\r\nThe operation returns the persisted ClinicalImpression:\r\n- `clinicalImpression` - The persisted ClinicalImpression resource with updated assessor values.\r\n## Operation side effects\r\n- The operation will update the status of the Measurement that is being invalidated or has the invalidation retracted to `entered-in-error` or `completed` respectively.\r\n- The operation will update the status to `entered-in-error` for any previous invalidation or invalidation retraction ClinicalImpression for the referenced Measurement, indicating that the previous ClinicalImpression is no longer used to represent the validity of the Measurement. The operation performs a search for any existing ClinicalImpression in the measurement validity cycle, and does not rely on/update the `previous` field on the input ClinicalImpression. If the input ClinicalImpression is for invalidation retraction, there must exist a ClinicalImpression invalidating the Measurement.\r\n- The operation will add an additional investigation with the code `item-modified`, referencing the Measurement version after the patch has been applied.\r\n- The operation will set assessor values (assessor, assessorOrganization and assessorOther). If the user is of type PRACTITIONER, assessor and assessorOrganization will be set. If the user is of type PATIENT, assessorOther will be set`.\r\n",
  "jurisdiction" : [{
    "coding" : [{
      "system" : "urn:iso:std:iso:3166",
      "code" : "DK",
      "display" : "Denmark"
    }]
  }],
  "affectsState" : true,
  "code" : "set-measurement-validity",
  "resource" : ["ClinicalImpression"],
  "system" : false,
  "type" : true,
  "instance" : false,
  "parameter" : [{
    "name" : "clinicalImpression",
    "use" : "in",
    "min" : 1,
    "max" : "1",
    "documentation" : "The ClinicalImpression resource representing the measurement, with versioned/unversioned references to the Measurement that's either being invalidated, or where the invalidation is being retracted.",
    "type" : "ClinicalImpression"
  }]
}

```
